@@ -1,3 +1,7 @@
+2017-11-17  Sam Steingold  <sds@gnu.org>
+
+	* loop.lisp: Use revadd pervasively.
+
 2017-11-16  Sam Steingold  <sds@gnu.org>
 
 	* clhs.lisp (starts-with-p): Extract and export.
